Is lunch a benefit?

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
             <ul>
               <li>Flexible working environment – work remote 2 days a week</li>
               <li>Join a diverse team!</li>
-              <li>7 minute walk from Richmond station</li>
-              <li>Close proximity to Swan St for a range of lunch options</li>
+              <li>7 minute walk from Richmond station and Swan St</li>
               <li>Salary range is $100–120k with options but negotiable for the right person</li>
             </ul>
           </div>
