--- a/index.html
+++ b/index.html
@@ -11,49 +11,43 @@
   <body>
     <div class="wrapper">
       <img class="logo" src="images/DrMeLogoHorizontal.svg" />
-      <div class="job">
-        <h2 class="job__title">
-          Frontend Engineer
-        </h2>
-        <div class="job__subline">
-          Dr Me is looking for an experienced frontend engineer to work on its products.
-        </div>
-        <div class="job__section">
-          <h3 class="job__section__heading">
-            Company
-          </h3>
-          <div class="job__section__content">
-            <p>Dr Me is a telemedicine startup based in Melbourne, Australia. We make it possible for patients to see a doctor from the convenience of their smart phone.</p>
-            <p>Our tech team is small but diverse. We eat lunch together most days and try to keep a positive, encouraging environment. We are often teaching each other and staying up to date on the Latest New Thing™.</p>
-            <p>We care about tooling and providing the best development experience we can. We move quickly but do regular iteration planning with the whole team so everyone stays on the same page. We’re not afraid to ask questions when we’re stuck and respect that uninterrupted work can be the best kind of work.</p>
+      <div class="openings">
+        <h1 class="openings__header">
+          Current Openings
+        </h1>
+        <a class="openings__link" href="frontend-engineer.html">
+          <div class="openings__link__title">
+            Frontend Engineer
           </div>
-        </div>
-        <div class="job__section">
-          <h3 class="job__section__heading">
-            Role
-          </h3>
-          <div class="job__section__content">
-            <p>Our app is built on a modern web-app stack (React, Redux, CSS Modules) and published across iOS and Android with Cordova.</p>
-            <p>We are looking for a product-focused engineer who has dealt with mid-large web apps. Someone who tries to keep their JavaScript DRY and is not afraid to spend some time thinking through a problem before they get started.</p>
-            <p>You should be familiar with React and Redux and can hopefully teach us a few things. Experience with an end-to-end testing framework, continuous integration and Ruby/Rails would be seen as a bonus.</p>
+          <div class="openings__link__subline">
+            Dr Me is looking for an experienced frontend engineer to work on its products.
           </div>
-        </div>
-        <div class="job__section">
-          <h3 class="job__section__heading">
-            Benefits
-          </h3>
-          <div class="job__section__content">
-            <ul>
-              <li>Flexible working environment – work remote 2 days a week</li>
-              <li>Join a diverse team!</li>
-              <li>7 minute walk from Richmond station and Swan St</li>
-              <li>Salary range is $100–120k with options but negotiable for the right person</li>
-            </ul>
+          <span class="openings__link__permalink">
+            Read the full job description
+          </span>
+        </a>
+        <a class="openings__link" href="backend-engineer.html">
+          <div class="openings__link__title">
+            Backend Engineer
           </div>
-        </div>
-        <div class="job__apply">
-          Applications to <a href="mailto:jobs@drme.com.au">jobs@drme.com.au</a>
-        </div>
+          <div class="openings__link__subline">
+            Dr Me is looking for an experienced backend engineer to work on its products.
+          </div>
+          <span class="openings__link__permalink">
+            Read the full job description
+          </span>
+        </a>
+        <a class="openings__link" href="product-manager.html">
+          <div class="openings__link__title">
+            Product Manager
+          </div>
+          <div class="openings__link__subline">
+            Dr Me is looking for a product manager to grow and foster its products.
+          </div>
+          <span class="openings__link__permalink">
+            Read the full job description
+          </span>
+        </a>
       </div>
     </div>
   </body>
