--- a/product-manager.html
+++ b/product-manager.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Work at Dr Me</title>
-    <meta name="description" content="Dr Me Backend Engineer job">
+    <meta name="description" content="Dr Me Product Manager job">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
