Add salary indicator

--- a/product-manager.html
+++ b/product-manager.html
@@ -53,6 +53,7 @@
               <li>Flexible working environment – work remote 2 days a week</li>
               <li>Join a diverse team!</li>
               <li>7 minute walk from Richmond station and Swan St</li>
+              <li>Salary range is $120–160 with options depending on experience</li>
             </ul>
           </div>
         </div>
