Add midweight engineer role

--- a/index.html
+++ b/index.html
@@ -15,12 +15,23 @@
         <h1 class="openings__header">
           Current Openings
         </h1>
-        <a class="openings__link" href="frontend-engineer.html">
+        <a class="openings__link" href="senior-frontend-engineer.html">
           <div class="openings__link__title">
-            Frontend Engineer
+            Senior Frontend Engineer
           </div>
           <div class="openings__link__subline">
             Dr Me is looking for an experienced frontend engineer to work on its products.
+          </div>
+          <span class="openings__link__permalink">
+            Read the full job description
+          </span>
+        </a>
+        <a class="openings__link" href="midweight-frontend-engineer.html">
+          <div class="openings__link__title">
+            Midweight Frontend Engineer
+          </div>
+          <div class="openings__link__subline">
+            Dr Me is looking for an midweight frontend engineer to work on its products.
           </div>
           <span class="openings__link__permalink">
             Read the full job description
