--- a/senior-frontend-engineer.html
+++ b/senior-frontend-engineer.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Work at Dr Me</title>
-    <meta name="description" content="Dr Me Frontend Engineer job">
+    <meta name="description" content="Dr Me Senior Frontend Engineer job">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
@@ -13,7 +13,7 @@
       <img class="logo" src="images/DrMeLogoHorizontal.svg" />
       <div class="job">
         <h2 class="job__title">
-          Frontend Engineer
+          Senior Frontend Engineer
         </h2>
         <div class="job__subline">
           Dr Me is looking for an experienced frontend engineer to work on its products.
