--- a/senior-frontend-engineer.html
+++ b/senior-frontend-engineer.html
@@ -16,7 +16,7 @@
           Senior Frontend Engineer
         </h2>
         <div class="job__subline">
-          Dr Me is looking for an experienced frontend engineer to work on its products.
+          Dr Me is looking for experienced frontend engineers to work on its products.
         </div>
         <div class="job__section">
           <h3 class="job__section__heading">
