--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
             Read the full job description
           </span>
         </a>
+        <a class="openings__link" href="frontend-engineer.html">
+          <div class="openings__link__title">
+            Frontend Engineer
+          </div>
+          <div class="openings__link__subline">
+            Dr Me is looking for a frontend engineer to work on its products.
+          </div>
+          <span class="openings__link__permalink">
+            Read the full job description
+          </span>
+        </a>
         <a class="openings__link" href="backend-engineer.html">
           <div class="openings__link__title">
             Backend Engineer
