Changed backend engineer listing to senior backend

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             Read the full job description
           </span>
         </a>
-        <a class="openings__link" href="backend-engineer.html">
+        <a class="openings__link" href="senior-backend-engineer.html">
           <div class="openings__link__title">
-            Backend Engineer
+            Senior Backend Engineer
           </div>
           <div class="openings__link__subline">
             Dr Me is looking for an experienced backend engineer to work on its products.
