Update backend engineer position

--- a/backend-engineer.html
+++ b/backend-engineer.html
@@ -16,7 +16,7 @@
           Backend Engineer
         </h2>
         <div class="job__subline">
-          Dr Me is looking for experienced backend engineers to work on its products.
+          Dr Me is looking for backend engineers to work on its products.
         </div>
         <div class="job__section">
           <h3 class="job__section__heading">
@@ -34,7 +34,7 @@
           </h3>
           <div class="job__section__content">
             <p>The core of our backend application is Ruby on Rails, which is deployed across multiple AZ’s in AWS. Where we can we are refactoring our application into self-contained components and we’re always looking to improve our tooling and process.</p>
-            <p>We are looking for a mid to senior backend engineer who has worked with Ruby on Rails in a production environment.</p>
+            <p>We are looking for a backend engineer who has worked with Ruby on Rails in a production environment.</p>
             <p>You should be fluent in:</p>
             <ul>
               <li>Ruby/Rails</li>
@@ -44,11 +44,10 @@
             <ul>
               <li>Linux</li>
               <li>PostgreSQL</li>
-              <li>Build pipelines</li>
             </ul>
             <p>The ideal candidate would also:</p>
             <ul>
-              <li>Have experience with Docker</li>
+              <li>Have experience with SEO & content management systems</li>
               <li>Enjoy keeping tabs on new technology and platforms</li>
             </ul>
           </div>
@@ -62,7 +61,7 @@
               <li>Flexible working environment – work remote 2 days a week</li>
               <li>Join a diverse team!</li>
               <li>7 minute walk from Richmond station and Swan St</li>
-              <li>Salary range is $100–120k with options but negotiable for the right person</li>
+              <li>Salary range is $80–100k with options but negotiable for the right person</li>
             </ul>
           </div>
         </div>
