Spruce it up a bit with post-technical CSS and photos

--- a/index.html
+++ b/index.html
@@ -9,10 +9,34 @@
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
+    <div class="header">
+      <div class="wrapper">
+        <img src="images/DrMeLogoStacked.svg" />
+        <h1>Work at Dr Me</h1>
+        <small>We're growing a talented, passionate, and diverse team at Dr Me. Come join us.</small>
+      </div>
+    </div>
     <div class="wrapper">
-      <img class="logo" src="images/DrMeLogoHorizontal.svg" />
+      <div class="office">
+        <h2 class="fancy">
+          The Workplace
+        </h2>
+        <iframe
+          width="360"
+          height="270"
+          frameborder="0" style="border:0; float: left; margin-right: 3rem; margin-bottom: 3rem"
+          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAaRMV2q98K6FY9HW24Q2vNd7iZC7kKmhg
+            &q=105+Dover+St+Cremorne" allowfullscreen>
+        </iframe>
+        <p>We're based out of Cremorne, with easy access to Swan St for food and short walk to Richmond Station and tram lines.</p>
+        <p>We share an office space with other startups: LIFX, Beanhunter, SmartTix, just to name a few!</p>
+        <hr />
+        <div class="images">
+          <img src="images/synergy.jpg" /><img src="images/bike.jpg" />
+        </div>
+       </div>
       <div class="openings">
-        <h1 class="openings__header">
+        <h2 class="openings__header fancy">
           Current Openings
         </h1>
         <a class="openings__link" href="senior-frontend-engineer.html">
@@ -59,6 +83,12 @@
             Read the full job description
           </span>
         </a>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="box">
+        <h3>Ready to work with&nbsp;us?</h3>
+        <p>Drop us an email: <a href="mailto:jobs@drme.com.au">jobs@drme.com.au</a></p>
       </div>
     </div>
     <script>
