--- a/senior-backend-engineer.html
+++ b/senior-backend-engineer.html
@@ -9,8 +9,16 @@
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
+    <div class="header">
+      <div class="wrapper">
+        <a href="/">
+          <img src="images/DrMeLogoStacked.svg" />
+          <h1>Work at Dr Me</h1>
+        </a>
+        <small>We're growing a talented, passionate, and diverse team at Dr Me. Come join us.</small>
+      </div>
+    </div>
     <div class="wrapper">
-      <img class="logo" src="images/DrMeLogoHorizontal.svg" />
       <div class="job">
         <h2 class="job__title">
           Senior Backend Engineer
@@ -70,6 +78,12 @@
         <div class="job__apply">
           Applications to <a href="mailto:jobs@drme.com.au">jobs@drme.com.au</a>
         </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="box">
+        <h3>Ready to work with&nbsp;us?</h3>
+        <p>Drop us an email: <a href="mailto:jobs@drme.com.au">jobs@drme.com.au</a></p>
       </div>
     </div>
     <script>
