--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           The Workplace
         </h2>
         <p>We're based out of Cremorne, with easy access to Swan St for food and short walk to Richmond Station and tram lines.</p>
-        <p>We share an office space with other startups: LIFX, Beanhunter, SmartTix, just to name a few!</p>
+        <p>We share an office space with other startups: <a href="http://lifx.com">LIFX</a>, <a href="http://beanhunter.com">Beanhunter</a>, <a href="http://smarttix.com.au">SmartTix</a>, just to name a few!</p>
         <hr />
         <div class="images">
           <img src="images/synergy.jpg" /><img src="images/bike.jpg" />
