Hide jobs we aren't taking at the moment

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             Read the full job description
           </span>
         </a>
-        <a class="openings__link" href="backend-engineer.html">
+        <a class="openings__link hidden" href="backend-engineer.html">
           <div class="openings__link__title">
             Backend Engineer
           </div>
@@ -54,7 +54,7 @@
             Read the full job description
           </span>
         </a>
-        <a class="openings__link" href="senior-frontend-engineer.html">
+        <a class="openings__link hidden" href="senior-frontend-engineer.html">
           <div class="openings__link__title">
             Senior Frontend Engineer
           </div>
@@ -65,7 +65,7 @@
             Read the full job description
           </span>
         </a>
-        <a class="openings__link" href="frontend-engineer.html">
+        <a class="openings__link hidden" href="frontend-engineer.html">
           <div class="openings__link__title">
             Frontend Engineer
           </div>
