Add more benefits

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         </h2>
         <p>We're based out of Cremorne, with easy access to Swan St for food and short walk to Richmond Station and tram lines.</p>
         <p>We share an office space with other startups: <a href="http://lifx.com">LIFX</a>, <a href="http://beanhunter.com">Beanhunter</a>, <a href="http://smarttix.com.au">SmartTix</a>, just to name a few!</p>
+        <p>We work remote two days a week for flexibility.</p>
+        <p>We have a training policy which covers conferences, workshops and online materials.</p>
         <hr />
         <div class="images">
           <img src="images/synergy.jpg" /><img src="images/bike.jpg" />
